# ptex

src/: CMakeLists.txt
src/doc/: CMakeLists.txt  Doxyfile  Doxyfile_API_only
src/package/: CMakeLists.txt  CMakeLists.txt~  Description.txt  ptexlogo.xcf  ptexlogo_small.xcf
src/ptex/: CMakeLists.txt  PtexHalf.cpp  PtexHalf.h  PtexInt.h  PtexPlatform.h
src/tests/: CMakeLists.txt  run_tests.py
src/utils/: CMakeLists.txt
